# adaptive-oci-chunking

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_adaptive_chunking.py  custom_selector.py  langchain_integration.py  llama_index_integration.py  oci_object_storage.py  sample.md
src/adaptive_chunking/: __init__.py  api.py  chunkers.py  cli.py  io.py  langchain.py  llama_index.py  metrics.py  models.py  oci.py  pipeline.py  selector.py  text.py
tests/: test_adaptive_chunking.py
